--- a/main.tex
+++ b/main.tex
@@ -336,12 +336,13 @@ The origin of the characteristics may come from a unique distribution of \I ions
 which form a double layer over the thickness on the order of 5--10 \A.
 
 %
-For the bulk and interfacial systems, I calculated the correlation functions of the hydrogen bond (HB) population, 
+For the bulk and interfacial systems, I calculated the correlation functions of the HB population, 
 and obtained the reaction rate constants with the HB formation and breakage. To analyze the HB dynamics on the interface, 
 we propose a statistical method which is based on the instantanous interface HB population for the instantaneous interface.
 With the help of instantaneous HB population operator, one do not need to know which molecules are within the instantaneous interface, 
 so there is no need to select the molecules on the interface and calculate the statistical average of physical quantities. 
-Except for the case where the interface thickness is low, this method can efficiently analyze the HB dynamics of the instantaneous interface. 
+Combining this method with selecting molecules on the interface, we can can efficiently obtaine more the HB dynamics of the instantaneous interface. 
+Combining this method with selecting the molecules on the interface, we can get more realistic and accurate hydrogen bond dynamics on the interface.
 And it can be easily applied to general interface systems or aqueous solutions.
 \end{abstract}
 
@@ -528,6 +529,7 @@ $\chi^{(2),\text{R}}$ & second-order resonant susceptibility & \\
 $\chi^{(2),\text{NR}}$ & second-order nonresonant susceptibility & \\
 $E_{\text{KSDFT}}$ & self consistent KS energy & \\
 $\Delta \nu'$  & shift of vibrational frequency & \\
+$h^\text{k,X}(t)$ & solvation shell HB population operator & \\
 $K_{\text{p,X}}$ & surface/bulk molar concentration ratio of ion X &  \\
 $S_{\text{HB}}(t)$ (or $s(t)$)& survival probability of HB & \\
 $t_t$ & temporal resolutions for calculating HB dynamics & \\
@@ -575,13 +577,13 @@ $\nu$ & vibrational frequency & \\
 % Include the appendices of the thesis as separate files from the Appendices folder
 % Uncomment the lines as you write the Appendices
 
-\include{Appendices/AppendixA}
+%\include{Appendices/AppendixA}
 \include{chapters/chap_calculation/chap_calculation}
 \include{chapters/chap_parameters/chap_parameters}
 \include{chapters/chap_propensities/chap_propensities}
 \include{chapters/chap_thickness/chap_thickness}
 \include{chapters/chap_hbd_more/chap_hbd_more}
-\include{chapters/chap_hkt/chap_hkt}
+%\include{chapters/chap_hkt/chap_hkt}
 
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
