--- a/example.bib
+++ b/example.bib
@@ -623,7 +623,7 @@ L'eau est un liquide dont les propriétés sont extraordinaires. Elle a une trè
     pages = {A403-A412}
 }
 @ARTICLE{Sciortino1989,
-    author = {F. Sciortino and S. Pornili},
+    author = {F. Sciortino and S. L. Fornili},
     title = {{Hydrogen Bond Cooperativity in Simulated Water: Time Dependence Analysis of Pair Interactions}},
     journal = {J. Chem. Phys.},
     year = {1989},
@@ -655,6 +655,20 @@ L'eau est un liquide dont les propriétés sont extraordinaires. Elle a une trè
     doi = {10.1103/PhysRevLett.64.1686},
     url = {https://link.aps.org/doi/10.1103/PhysRevLett.64.1686},
     abstract = {We analyze the distribution of bond lifetimes in simulations of liquid water using a novel bond definition. We find that the characteristic lifetimes of the bonds and of the gel network itself both increase strongly when temperature is decreased"and even appear to diverge at a temperature well below the freezing temperature"thereby providing an appealing physical picture of the anomalous behavior of water in the supercooled region. {\textcopyright} 1990 The American Physical Society.}
+}
+@article{Poole1994,
+  title = {Effect of Hydrogen Bonds on the Thermodynamic Behavior of Liquid Water},
+  author = {Poole, Peter H. and Sciortino, Francesco and Grande, Tor and Stanley, H. Eugene and Angell, C. Austen},
+  journal = {Phys. Rev. Lett.},
+  volume = {73},
+  issue = {12},
+  pages = {1632--1635},
+  numpages = {0},
+  year = {1994},
+  month = {Sep},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.73.1632},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.73.1632}
 }
 @ARTICLE{HX01,
     author = {H. Xu and B. J. Berne},
@@ -918,7 +932,7 @@ L'eau est un liquide dont les propriétés sont extraordinaires. Elle a une trè
     doi = {https://doi.org/10.1063/1.1599274},
     url = {https://aip.scitation.org/doi/abs/10.1063/1.1599274}
 }
-@ARTICLE{dang2002,
+@ARTICLE{Dang2002,
     author = {L. X. Dang and T.-M. Chang},
     title = {{Molecular Mechanism of Ion Binding to the Liquid/Vapor Interface of Water}},
     journal = {J. Phys. Chem. B},
@@ -1123,7 +1137,7 @@ URL = {https://doi.org/10.1063/1.464521},
     doi = {10.1021/cr068037a},
     url = {https://pubs.acs.org/doi/abs/10.1021/cr068037a}
 }
-@ARTICLE{CST11,
+@ARTICLE{TianCS2011,
     author = {C. Tian and S. J. Byrnes and H. L. Han and Y. R. Shen},
     title = {{Surface Propensities of Atmospherically Relevant Ions in Salt Solutions Revealed by Phase-Sensitive Sum Frequency Vibrational Spectroscopy}},
     journal = {J. Phys. Chem. Lett.},
@@ -1133,7 +1147,7 @@ URL = {https://doi.org/10.1063/1.464521},
     url = {https://pubs.acs.org/doi/abs/10.1021/jz200791c},
     pages = {1946}
 }
-@ARTICLE{PJ01,
+@ARTICLE{Jungwirth2001,
     author = {P. Jungwirth and D. J. Tobias},
     title = {{Molecular Structure of Salt Solutions: A New View of the Interface with Implications for Heterogeneous Atmospheric Chemistry}},
     journal = {J. Phys. Chem. B},
@@ -1143,7 +1157,7 @@ URL = {https://doi.org/10.1063/1.464521},
     volume = {105},
     pages = {10468--10472}
 }
-@ARTICLE{PJ02,
+@ARTICLE{Jungwirth2002,
     author = {P. Jungwirth and D. J. Tobias},
     title = {{Ions at Air/Water Interface}},
     journal = {J. Phys. Chem. B},
@@ -1153,7 +1167,7 @@ URL = {https://doi.org/10.1063/1.464521},
     url = {https://pubs.acs.org/doi/abs/10.1021/jp020242g},
     pages = {6361--6373}
 }
-@ARTICLE{HTB08,
+@ARTICLE{BianHT2008,
     author = {H. T. Bian and R. R. Feng and Y. Y. Xu and Y. Guo and H. F. Wang},
     title = {{Increased interfacial thickness of the NaF, NaCl and NaBr salt aqueous solutions probed with non-resonant surface second harmonic generation (SHG)}},
     journal = {Phys. Chem. Chem. Phys.},
@@ -1616,20 +1630,13 @@ ions. The effects of ions on aqueous interfaces have drawn renewed interest for 
     volume = {8},
     pages = {3034-4043}
 }
-@ARTICLE{JVV07,
+@ARTICLE{VandeVondele2007,
     author = {J. VandeVondele and J. Hutte},
     title = {{Gaussian Basis Sets for Accurate Calculations on Molecular Systems in Gas and Condensed Phases}},
     journal = {J. Chem. Phys.},
     year = {2007},
     volume = {127},
     pages = {114105}
-}
-@ARTICLE{SG96,
-    author ={S. Goedecker and M. Teter and J. Hutter},
-    title = {{Separable Dual-Space Gaussian Pseudopotentials}},
-    year = {1996},
-    volume = {54},
-    pages = {1703}
 }
 @ARTICLE{RMN02,
  author = {R. M. Nieminen},
@@ -2787,19 +2794,6 @@ url = {http://link.aps.org/doi/10.1103/PhysRevLett.77.3865}
     doi = {10.1103/PhysRevLett.72.238},
     url = {http://link.aps.org/doi/10.1103/PhysRevLett.72.238}
 }
-@article{GTH96,
-  title = {Separable dual-space Gaussian pseudopotentials},
-  author = {Goedecker, S. and Teter, M. and Hutter, J.},
-  journal = {Phys. Rev. B},
-  volume = {54},
-  issue = {3},
-  pages = {1703--1710},
-  numpages = {0},
-  year = {1996},
-  publisher = {American Physical Society},
-  doi = {10.1103/PhysRevB.54.1703},
-  url = {http://link.aps.org/doi/10.1103/PhysRevB.54.1703}
-} 
 @article{HGH98,
 title = {Relativistic separable dual-space Gaussian pseudopotentials from {H} to {R}n},
 author = {Hartwigsen, C. and Goedecker, S. and Hutter, J.},
@@ -3446,13 +3440,6 @@ in gas and condensed phases}},
     year = {2007},
     volume = {127},
     pages = {114105}
-}
-@ARTICLE{SG96,
-    author ={S. Goedecker and M. Teter and J. Hutter},
-    title = {{Separable dual-space Gaussian pseudopotentials}},
-    year = {1996},
-    volume = {54},
-    pages = {1703}
 }
 @ARTICLE{RMN02,
  author = {R. M. Nieminen},
@@ -6063,13 +6050,6 @@ ions. The effects of ions on aqueous interfaces have drawn renewed interest for 
     volume = {127},
     pages = {114105}
 }
-@ARTICLE{SG96,
-    author ={S. Goedecker and M. Teter and J. Hutter},
-    title = {{Separable Dual-Space Gaussian Pseudopotentials}},
-    year = {1996},
-    volume = {54},
-    pages = {1703}
-}
 @ARTICLE{RMN02,
  author = {R. M. Nieminen},
     title = {{From Atomistic Simulation Towards Multiscale Modelling of Materials}},
@@ -7066,19 +7046,6 @@ publisher = {American Physical Society},
 doi = {10.1103/PhysRevLett.72.238},
 url = {http://link.aps.org/doi/10.1103/PhysRevLett.72.238}
 }
-@article{GTH96,
-  title = {Separable dual-space Gaussian pseudopotentials},
-  author = {Goedecker, S. and Teter, M. and Hutter, J.},
-  journal = {Phys. Rev. B},
-  volume = {54},
-  issue = {3},
-  pages = {1703--1710},
-  numpages = {0},
-  year = {1996},
-  publisher = {American Physical Society},
-  doi = {10.1103/PhysRevB.54.1703},
-  url = {http://link.aps.org/doi/10.1103/PhysRevB.54.1703}
-} 
 @article{Hartwigsen1998,
 title = {Relativistic separable dual-space Gaussian pseudopotentials from {H} to {R}n},
 author = {Hartwigsen, C. and Goedecker, S. and Hutter, J.},
@@ -7681,13 +7648,6 @@ in gas and condensed phases}},
     year = {2007},
     volume = {127},
     pages = {114105}
-}
-@ARTICLE{SG96,
-    author ={S. Goedecker and M. Teter and J. Hutter},
-    title = {{Separable dual-space Gaussian pseudopotentials}},
-    year = {1996},
-    volume = {54},
-    pages = {1703}
 }
 @ARTICLE{RMN02,
  author = {R. M. Nieminen},
@@ -9771,7 +9731,7 @@ pages = {1981-1991},
 abstract= {{Water structure as a function of temperature from X-ray scattering experiments and ab initio molecular dynamics.}}
 }
 @article{Goedecker1996,
-  title = {Separable dual-space Gaussian pseudopotentials},
+  title = {Separable Dual-Space Gaussian Pseudopotentials},
   author = {Goedecker, S. and Teter, M. and Hutter, J.},
   journal = {Phys. Rev. B},
   volume = {54},
@@ -9846,15 +9806,35 @@ year = {1999},
 volume = {103},
 pages = {10398-10408}
 }
-@ARTICLE{,
-author = {},
-title = {{}},
-journal = {},
-year = {},
-volume = {},
-number ={},
-pages = {},
-abstract= {{ }}
+@article{Kumar2007,
+author = {Kumar,R.  and Schmidt,J. R.  and Skinner,J. L. },
+title = {Hydrogen Bonding Definitions and Dynamics in Liquid Water},
+journal = {The Journal of Chemical Physics},
+volume = {126},
+number = {20},
+pages = {204107},
+year = {2007},
+doi = {10.1063/1.2742385},
+URL = { 
+        https://doi.org/10.1063/1.2742385
+},
+eprint = { 
+        https://doi.org/10.1063/1.2742385   
+}
+}
+@ARTICLE{Soper2008b,
+author = { A. K. Soper },
+title = {{Structural Transformations in Amorphous Ice and Supercooled Water and Their Relevance to the Phase Diagram of Water}},
+journal = {Molecular Physics},
+volume = {106},
+number = {16-18},
+pages = {2053-2076},
+year  = {2008},
+publisher = {Taylor & Francis},
+doi = {10.1080/00268970802116146},
+URL = {https://doi.org/10.1080/00268970802116146},
+eprint = {https://doi.org/10.1080/00268970802116146},
+abstract = { Arguably the most important liquid in our existence, water continues to attract enormous efforts to understand its underlying structure, dynamics and thermodynamics. These properties become increasingly complex and controversial as we progress into and below the ‘no man's land' where bulk water can only exist as crystalline ice. Various, so far unconfirmed, scenarios are painted for this region, including the second critical point scenario, the singularity-free scenario, and most recently the ‘critical point-free’ scenario [C.A. Angell, Science 319, 582 (2008)]. In this article the structural aspects of water in its supercooled, amorphous and confined states are explored, to the extent that these are known, and related to the water phase diagram. An important issue to emerge is the extent to which structural measurements on a disordered material can tell us about its phase. }
 }
 @ARTICLE{,
 author = {},
