--- a/main.tex
+++ b/main.tex
@@ -289,11 +289,11 @@ Alkali Nitrate Aqueous Solutions from \abinitio Molecular Dynamics} % Your thesi
 
 \vspace*{0.2\textheight}
 
-\noindent\enquote{\itshape The accurate description of water has been and continues to be a challenge for both
-experiment and simulations due to the directional nature and the weakness of the hydrogen bonds in conjunction 
-with its autodissociation properties.}\bigbreak
+%\noindent\enquote{\itshape The accurate description of water has been and continues to be a challenge for both
+%experiment and simulations due to the directional nature and the weakness of the hydrogen bonds in conjunction 
+%with its autodissociation properties.}\bigbreak
 
-\hfill Dominik Marx  and J\"urg Hutter 
+%\hfill Dominik Marx  and J\"urg Hutter 
 
 \noindent\enquote{\itshape If a problem is worth looking at at all, then no mathematical technique is to be judged too sophisticated.}\bigbreak
 
@@ -309,6 +309,8 @@ I have analyzed the interfacial structure and dynamics of solutions containing a
 Molecular Dynamics (DFTMD) simulations. In particular I have presented a detailed analysis of the Hydrogen Bond (HB) structure at the interface and 
 have calculated the interface vibrational spectra in order to provide a molecular interpretation of available experimental data.
 %
+When calculating the SFG spectrum, I used a new approximation method. This method ignores the NR part of the spectrum and finally obtains the interface's nonlinear polarizability to infrared incident light through the velocity correlation function. The theoretical value of the imaginary part of the nonlinear polarizability obtained by this method is the same as the experimental PS-SFG spectrum result.
+
 As a first system I have analyzed the behaviour of a salty water/vapor interface containing LiNO$_3$.
 Both the measured and calculated Vibrational Sum-Frequency Generation (VSFG) spectra shows a reduced intensity of the lower frequency portion region,
 when compared to the pure water/vapor interface.
@@ -322,28 +324,31 @@ I have shown that the use of simple models, such as small cluster is not suitabl
 and cannot provide a microscopic interpretation of the spectra.
 Realistic models of the interface are required to address the perturbation of the ion on the water surface.
 
+Based on the calculation of MLWF, the parameterization of the spatial gradient of the components of dipole moment 
+and the polarization is realized. Therefore, the calculation of the correlation between the dipole moment and the polarization is 
+transformed into the calculation of the velocity correlation function.
 %
 The difference between the HB dynamics outside the first shell of the \Li and that of nitrate-water Hydrogen (H-) bonds
-at interfaces is not visible from the values of the HB relaxation time. They reflect the difference 
-between HB dynamics in bulk water and that at the water/vapor interfaces.
-For the water/vapor interface of alkaline iodine solutions, I find that the cations does not alter the H-bonding network outside the first hydration shell of cations.
+at interfaces is not visible from the values of the HB relaxation time. 
+%They reflect the difference between HB dynamics in bulk water and that at the water/vapor interfaces.
+For the water/vapor interface of alkaline iodine solutions, I also find that the cations does not alter the H-bonding network outside the first hydration shell of the cations themselves.
 It is concluded that no long-range structural-changing effects for alkali metal cations.
 
 %
 From the results of nonlinear susceptibilities, I conclude that these water molecules at the water/vapor interfaces of LiI, NaI, and KI solutions are participating
 in weaker H-bonds, compared with those at the pure water surface.
-The origin of the characteristics may come from a unique distribution of \I ions and alkali metal cations,
+The origin of the characteristics comes from a unique distribution of \I ions and alkali metal cations,
 which form a double layer over the thickness on the order of 5--10 \A.
 
 %
 For the bulk and interfacial systems, I calculated the correlation functions of the HB population, 
-and obtained the reaction rate constants with the HB formation and breakage. To analyze the HB dynamics on the interface, 
-we propose a statistical method which is based on the instantanous interface HB population for the instantaneous interface.
-With the help of instantaneous HB population operator, one do not need to know which molecules are within the instantaneous interface, 
-so there is no need to select the molecules on the interface and calculate the statistical average of physical quantities. 
-Combining this method with selecting molecules on the interface, we can can efficiently obtaine more the HB dynamics of the instantaneous interface. 
-Combining this method with selecting the molecules on the interface, we can get more realistic and accurate hydrogen bond dynamics on the interface.
-And it can be easily applied to general interface systems or aqueous solutions.
+and obtained the reaction rate constants with the HB formation and breakage. 
+To analyze the HB dynamics on the interface, 
+I proposed a new statistical scheme which is based on the interfacial HB population for the instantaneous interface.
+With the help of the HB population operator, one do not need to sample the molecules who are within the instantaneous interface, 
+i.e., no need to identify the molecules on the interface and calculate the statistical average for the interesting physical quantities. 
+Combining this method with molecule sampling on the interface, we can get more realistic and accurate HB dynamics for the air-water interface.
+The basic idea of this method is also applied to general interface systems, such as the solvation shells of ions in aqueous solutions.
 \end{abstract}
 
 %----------------------------------------------------------------------------------------
@@ -392,12 +397,20 @@ The financial supports of the China Scholarship Council and TRR146 are gratefull
 %----------------------------------------------------------------------------------------
 %	LIST OF CONTENTS/FIGURES/TABLES PAGES
 %----------------------------------------------------------------------------------------
-
+{
+\hypersetup{linkcolor=black}
 \tableofcontents % Prints the main table of contents
+}
 
+{
+\hypersetup{linkcolor=black}
 \listoffigures % Prints the list of figures
+}
 
+{
+\hypersetup{linkcolor=black}
 \listoftables % Prints the list of tables
+}
 
 %----------------------------------------------------------------------------------------
 %	ABBREVIATIONS
@@ -416,7 +429,8 @@ The financial supports of the China Scholarship Council and TRR146 are gratefull
 \textbf{H-} & \textbf{H}ydrogen\\
 \textbf{HB} & \textbf{H}ydrogen \textbf{B}ond\\
 \textbf{HK} & \textbf{H}ohenberg-\textbf{K}ohn\\
-\textbf{IHB} & \textbf{I}nstantaneous interface \textbf{H}ydrogen \textbf{B}ond\\
+\textbf{HSHB} & \textbf{H}ydration \textbf{S}hell \textbf{H}ydrogen \textbf{B}ond\\
+\textbf{IHB} & \textbf{I}nterface \textbf{H}ydrogen \textbf{B}ond\\
 \textbf{KS} & \textbf{K}ohn-\textbf{S}ham\\
 \textbf{LDA} & \textbf{L}ocal \textbf{D}ensity \textbf{A}pproximation\\
 \textbf{MD} & \textbf{M}olecular \textbf{D}ynamics\\
@@ -463,9 +477,11 @@ molar gas constant & $R$ & 8.314 472(15) J mol$^{-1}$ K$^{-1}$
 
 \addlinespace % Gap to separate the Roman symbols from the Greek
 
+$f_i$ & activity coefficient of species $i$ & \\
 $Z_{\text{X}}$ & atomic number of atom X & \\
 ${\bf R}$ & atomic coordinates & \\
 $\tau_{\mathrm{a}}$ & average lifetime of H-bonds: $\langle\tau_{\mathrm{a}}\rangle = \int_0^\infty tP_{\mathrm{a}}(t) d t $ & \\
+$\mu_i$ &chemical potential of component $i$ & \\
 $\kappa_i$ & decay rate of $C_2(t)$ & \\
 $n_{\text{X}}$ & coordination number of ion X & \\
 $\delta_1$ & difference between the first peaks' positions of the RDFs $g_{X-O}$ and $g_{X-H}$ & \\
@@ -475,6 +491,7 @@ $A$ & dipole polarizability (tensor) & \\
 $D$ & direction cosine matrix  & \\
 $r$ & distance & \\
 ${\mu}$ & electric dipole vector & \\
+${\phi}$ & electric potential & \\
 ${\bf E}$ & electric field strength &  \\
 $n({\bf r})$ & electron density & \\
 $H_\text{e}$ & electronic many-body Hamiltonian & \\
@@ -483,6 +500,7 @@ $V_{\text{ee}}$ & electron-electron repulsion energy & \\
 $T[n]$ & electronic kinetic energy & \\
 $E_{\text{disp}}^{(2)}$ & empirical two-body dispersion correction of energy & \\
 $E_{\text{disp}}^{(3)}$ & empirical three-body nonadditivity dispersion correction of energy & \\
+$F$ & Farady constant &\\
 $\Delta F_{AB}$ & free energy difference between configuration A and B &  \\
 $F_A$ & free energy of configuration A &  \\
 $L_{\eta\kappa}$ & Fresnel coefficients & \\
@@ -506,6 +524,7 @@ $\omega_{\text{e}}$ & the lowest electronic frequency &  \\
 $r_{\text{OO}}^{\text{c}}$ & the maximum value of the interoxygen distance (in the definition of HB) & \\
 $\phi^{\text{c}}$ & the maximum value of the angle between the O--O axis and one of the & \\
                   & O--H bonds (in the definition of HB) & \\
+$m_i$ & molality (bulk or surface) of the ion $i$ & \\
 $N$ & number of water molecules & \\
 $R_{\text{OH}}$ & O-H length in water molecule & \\
 $C_2(t)$ & orientational anisotropy decay & \\
@@ -530,13 +549,20 @@ $\chi^{(2),\text{NR}}$ & second-order nonresonant susceptibility & \\
 $E_{\text{KSDFT}}$ & self consistent KS energy & \\
 $\Delta \nu'$  & shift of vibrational frequency & \\
 $h^\text{k,X}(t)$ & solvation shell HB population operator & \\
+$m_i^*$ & solvent molality & \\
+$\nu_i$ & stoichiometry of ion $i$ & \\
+$\Gamma_i$ & surface excess of component $i$ & \\
 $K_{\text{p,X}}$ & surface/bulk molar concentration ratio of ion X &  \\
+$\gamma$ & surface tension & \\
 $S_{\text{HB}}(t)$ (or $s(t)$)& survival probability of HB & \\
 $t_t$ & temporal resolutions for calculating HB dynamics & \\
+$a_i$ & thermodynamic activity of a chemical species $i$ & \\
+$K^\ominus$ & thermodynamic equilibrium constant &  \\
 $d$ & thickness of layer of interface (model) & \\
 $\tau$ & time for switching allegiance of a HB & \\
 $\hat{\mu}(t)$ & unit vector of the transition dipole & \\
 $g(\nu)$ & VDOS for selected atoms &  \\
+$z_i$ & valence of species $i$ & \\
 ${\bf v}$ & velocity of an atom & \\
 $C(t)$ & velocity auto-correlation function & \\
 $\nu$ & vibrational frequency & \\
@@ -579,6 +605,7 @@ $\nu$ & vibrational frequency & \\
 
 %\include{Appendices/AppendixA}
 \include{chapters/chap_calculation/chap_calculation}
+\include{chapters/chap_cp2k/chap_cp2k}
 \include{chapters/chap_parameters/chap_parameters}
 \include{chapters/chap_propensities/chap_propensities}
 \include{chapters/chap_thickness/chap_thickness}
