--- a/main.tex
+++ b/main.tex
@@ -160,7 +160,7 @@ headsepline, % Uncomment to get a line under the header
 %
 \newcommand{\CHB}{$C_{\text{HB}}(t)$\xspace}
 \newcommand{\SHB}{$S_{\text{HB}}(t)$\xspace}
-
+\newcommand{\LiFourW}{[Li$\cdot$(H$_2$O)$_4$]$^+$}
 %Renew the \AA command in order to have a space when we want
 \let\oldAA\AA
 \renewcommand{\AA}{\oldAA\xspace}
@@ -510,7 +510,7 @@ $\omega_{\text{IR}}$ & frequency of the incident infrared beam &  \\
 $h(t)$ & HB population operator & \\
 $h^{(d)}(t)$ & HB population operator (it is 1 if the tagged pair are closer than $r_{\text{OO}}^{\text{c}}$)& \\
 $H(t)$ & HB population operator (continuously)& \\
-$C_{\text{HB}}(t)$ (or $c(t)$) & HB population operator correlation function & \\
+$C_{\text{HB}}(t)$ (or $c(t)$) & HB population auto-correlation function & \\
 $\omega_{\text{I}}$ & highest nuclear phonon frequency & \\
 $\theta$ & H-O-H angle in a water molecule&  \\
 $\beta$ & hyperpolarizability; reciprocal temperature & \\
