--- a/example.bib
+++ b/example.bib
@@ -106,11 +106,9 @@
     url = {https://journals.aps.org/prb/abstract/10.1103/PhysRevB.53.3764},
     file = {:home/gang/Nutstore Files/Ref{\_}by{\_}name/S/Seidl1996.pdf:pdf},
     issn = {1550235X},
-    journal = {Physical Review B - Condensed Matter and Materials Physics},
-    mendeley-groups = {thesis{\_}1},
+    journal = {Phys. Rev. B},
     number = {7},
     pages = {3764--3774},
-    pmid = {9983927},
     title = {{Generalized Kohn-Sham schemes and the band-gap problem}},
     volume = {53},
     year = {1996}
@@ -334,7 +332,7 @@
     url = {https://pubs.acs.org/doi/abs/10.1021/j100847a014},
     file = {:home/gang/Nutstore Files/Ref{\_}by{\_}name/J/Jarvis1968.pdf:pdf},
     issn = {00223654},
-    journal = {Journal of Physical Chemistry},
+    journal = {J. Phys. Chem.},
     mendeley-groups = {thesis{\_}1},
     number = {1},
     pages = {74--78},
@@ -391,7 +389,7 @@ To obtain the vibrations with the highest frequecies $\nu_\text{max}$, the sampl
   doi = {10.1103/PhysRevB.66.085401},
   url = {https://link.aps.org/doi/10.1103/PhysRevB.66.085401}
 }
-@article{AC00,
+@article{Chandra2000,
   abstract = {{We have performed a series of molecular dynamics simulations of aqueous NaCl and KCl solutions
     at different concentrations to investigate the effects of ion atmosphere on the dynamics of water-water
     hydrogen bonds at room temperature. The average number of hydrogen bonds per water molecule
@@ -818,7 +816,7 @@ L'eau est un liquide dont les propriétés sont extraordinaires. Elle a une trè
    author = {Janamejaya Chowdhary and Branka M. Ladanyi},
    doi = {10.1021/jp8061509},
    issue = {13},
-   journal = {The Journal of Physical Chemistry B},
+   journal = {J. Phys. Chem. B},
    month = {11},
    pages = {4045-4053},
    publisher = {American Chemical Society},
@@ -1065,7 +1063,7 @@ URL = {https://doi.org/10.1063/1.464521},
 @ARTICLE{KM98,
     author = {Mizoguchi, K. and Ujike, T. and Tominaga, Y.},
     title = {{Dynamics Structure of Water in NaCl Aqueous Solution}},
-    journal = {The Journal of Chemical Physics},
+    journal = {J. Chem. Phys.},
     volume = {109},
     number = {5},
     pages = {1867-1872},
@@ -1183,9 +1181,9 @@ URL = {https://doi.org/10.1063/1.464521},
     volume = {24},
     pages = {247-260}
 }
-@ARTICLE{YJZ06,
+@ARTICLE{ZhangYanjie2006,
     author = {Y. Zhang and P. S Cremer},
-    title = {{Interactions between macromolecules and ions: the Hofmeister series}},
+    title = {{Interactions between Macromolecules and Ions: the Hofmeister Series}},
     journal = {Current Opinion in Chemical Biology},
     year = {2006},
     volume = {10},
@@ -1611,7 +1609,7 @@ ions. The effects of ions on aqueous interfaces have drawn renewed interest for 
     url = {https://ui.adsabs.harvard.edu/abs/1998JChPh.109.7737S},
     pages = {7737--7744}
 }
-@ARTICLE{MFK01,
+@ARTICLE{Kropman2001,
     author = {M. F. Kropman and H. J. Bakker},
     title = {{Negligible Effect of Ions on the Hydrogen-Bond Structure in Liquid Water}},
     journal = {Science},
@@ -1692,7 +1690,7 @@ ions. The effects of ions on aqueous interfaces have drawn renewed interest for 
     number = {2},
     pages = {197-204},
     year  = {1969},
-    publisher = {Taylor & Francis},
+    publisher = {Taylor \& Francis},
     doi = {10.1080/00268976900100941},
     URL = {https://doi.org/10.1080/00268976900100941}
 }
@@ -2137,7 +2135,7 @@ pages = {2252-2260}
     url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/jcc.20078},
     file = {:home/gang/Nutstore Files/Ref{\_}by{\_}name/G/Grimme2004.pdf:pdf},
     issn = {01928651},
-    journal = {Journal of Computational Chemistry},
+    journal = {J. Comp. Chem.},
     keywords = {Density functional theory,Empirical corrections,Van der Waals complexes},
     mendeley-groups = {thesis{\_}1},
     number = {12},
@@ -3495,14 +3493,6 @@ in gas and condensed phases}},
     journal = {Structure and Dynamics of Water and Aqueous Solutions, Princeton Center for Theoretical Physics},
     year = {2010}
 }
-@ARTICLE{AGL05,
- author = {A. G. Lambert and P. B. Davies and D. J. Neivandt},
-    title = {{Implementing the Theory of Sum Frequency Generation Vibrational Spectroscopy: A Tutorial Review}},
-    journal = {Applied Spectroscopy Reviews}, 
-    year = {2005},
-    volume = {40:2},
-    pages = {103-145}
-}
 @BOOK{Piela07,
     author = {L. Piela},
     title = {{Ideas of Quantum Chemistry}},
@@ -4801,70 +4791,29 @@ year = {1989}
     pages = {6767--6776},
     doi = {10.1021/j100018a004},
     url = {https://pubs.acs.org/doi/abs/10.1021/j100018a004},
-    abstract= {{Dynamics of liquid water.}}
+    abstract= {Dynamics of liquid water.}
 }
-
-
 @article{doi:10.1063/1.471771,
 author = {Tuckerman,Mark E.  and Marx,Dominik  and Klein,Michael L.  and Parrinello,Michele },
 title = {Efficient and general algorithms for path integral Car–Parrinello molecular dynamics},
-journal = {The Journal of Chemical Physics},
+journal = {J. Chem. Phys.},
 volume = {104},
 number = {14},
 pages = {5579-5588},
 year = {1996},
 doi = {10.1063/1.471771},
-
 URL = { 
         https://doi.org/10.1063/1.471771
-    
-},
-eprint = { 
-        https://doi.org/10.1063/1.471771
-    
-}
-
-}
-
-
-
-
-
-
-
-
+}}
 @article{doi:10.1063/1.474776,
 author = {Root,Leslie J.  and Berne,B. J. },
 title = {Effect of pressure on hydrogen bonding in glycerol: A molecular dynamics investigation},
-journal = {The Journal of Chemical Physics},
+journal = {J. Chem. Phys.},
 volume = {107},
 number = {11},
 eprint = { 
-        https://doi.org/10.1063/1.474776
-    
-}
-
-}
-
-
-
-
-
-
-
-
-
-@ARTICLE{ ,
-author = {},
-title = {{}},
-journal = {},
-year = {},
-volume = {},
-number ={},
-pages = {},
-abstract= {{ }}
-}
-
+        https://doi.org/10.1063/1.474776    
+}}
 @BOOK{Sparks2018,
   title = {Soil Physical Chemistry},
   publisher = {CRC Press},
@@ -6089,18 +6038,6 @@ ions. The effects of ions on aqueous interfaces have drawn renewed interest for 
     year = {2005},
     volume = {40:2},
     pages = {103-145}
-}
-@article{Pulay69,
-    author = {Pulay, P},
-    title = {{Ab Initio Calculation of Force Constants and Equilibrium Geometries in Polyatomic Molecules: I. Theory}},
-    journal = {Mol. Phys.},
-    volume = {17},
-    number = {2},
-    pages = {197-204},
-    year  = {1969},
-    publisher = {Taylor & Francis},
-    doi = {10.1080/00268976900100941},
-    URL = {https://doi.org/10.1080/00268976900100941}
 }
 @ARTICLE{Mas96,
     author = {E. M. Mas and K. Szalewicz},
@@ -8895,7 +8832,7 @@ url={https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3869154/}
 @article{Banerjee2016,
 author = {Banerjee, Puja  and Yashonath, Subramanian and Bagchi, Biman },
 title = {Coupled jump rotational dynamics in aqueous nitrate solutions},
-journal = {The Journal of Chemical Physics},
+journal = {J. Chem. Phys.},
 volume = {145},
 number = {23},
 pages = {234502},
@@ -8941,7 +8878,7 @@ abstract= {{It is observed that the water molecules present in the first hydrati
 }
 @article{Pettersson2015,
 title = "The Structure of Water: from Ambient to Deeply Supercooled",
-journal = "Journal of Non-Crystalline Solids",
+journal = {Journal of Non-Crystalline Solids},
 volume = "407",
 pages = "399 - 417",
 year = "2015",
@@ -9673,7 +9610,7 @@ abstract = "We show that nanocrystals share a common and intrinsic skin electric
 @article{Kuehne2020,
 author = {Kühne,Thomas D.  and Iannuzzi,Marcella  and Del Ben,Mauro  and Rybkin,Vladimir V.  and Seewald,Patrick  and Stein,Frederick  and Laino,Teodoro  and Khaliullin,Rustam Z.  and Schütt,Ole  and Schiffmann,Florian  and Golze,Dorothea  and Wilhelm,Jan  and Chulkov,Sergey  and Bani-Hashemian,Mohammad Hossein  and Weber,Valéry  and Borštnik,Urban  and Taillefumier,Mathieu  and Jakobovits,Alice Shoshana  and Lazzaro,Alfio  and Pabst,Hans  and Müller,Tiziano  and Schade,Robert  and Guidon,Manuel  and Andermatt,Samuel  and Holmberg,Nico  and Schenter,Gregory K.  and Hehn,Anna  and Bussy,Augustin  and Belleflamme,Fabian  and Tabacchi,Gloria  and Glöß,Andreas  and Lass,Michael  and Bethune,Iain  and Mundy,Christopher J.  and Plessl,Christian  and Watkins,Matt  and VandeVondele,Joost  and Krack,Matthias  and Hutter,Jürg },
 title = {CP2K: An electronic structure and molecular dynamics software package - Quickstep: Efficient and accurate electronic structure calculations},
-journal = {The Journal of Chemical Physics},
+journal = {J. Chem. Phys.},
 volume = {152},
 number = {19},
 pages = {194103},
@@ -9717,7 +9654,7 @@ abstract= {{HBD of air-water interface with MD simulations.}}
 	pages = {2717--2730},
 	author = {A. K. Soper},
 	title = {The quest for the structure of water and aqueous solutions},
-	journal = {Journal of Physics: Condensed Matter},
+	journal = {J. Phys.: Condensed Matter},
 	abstract = {During the past 25 years neutron diffraction has made a major contribution to understanding the microscopic structure of water and aqueous solutions. By performing isotope substitution on specific atomic sites, it is possible to develop a comprehensive picture of the way water molecules organize themselves around the ions and molecules which dissolve in or mix with water. The resulting data provide a sensitive, sometimes controversial, test of existing theories of the aqueous systems, which due to their complexity at the microscopic level, can normally only be derived using computer simulation techniques. This paper reviews some of the recent achievements in the field of neutron diffraction from aqueous systems and suggests how future experiments might be interpreted with the aid of computer simulation techniques.}
 }
 @ARTICLE{Hura2003,
@@ -9750,7 +9687,7 @@ abstract= {{Water structure as a function of temperature from X-ray scattering e
   journal = {Phys. Rev. B},
   volume = {58},
   issue = {7},
-  pages = {3641--3662},
+  pages = {3641-3662},
   numpages = {0},
   year = {1998},
   month = {Aug},
@@ -9758,10 +9695,20 @@ abstract= {{Water structure as a function of temperature from X-ray scattering e
   doi = {10.1103/PhysRevB.58.3641},
   url = {https://link.aps.org/doi/10.1103/PhysRevB.58.3641}
 }
+@ARTICLE{Ishiyama2014,
+  author = {T. Ishiyama and T. Imamura and A. Morita},
+  title = {Theoretical Studies of Structures and Vibrational Sum Frequency Generation Spectra at Aqueous Interfaces},
+  journal = {Chem. Rev.},
+  year = {2014},
+  volume = {114},
+  pages = {8447-8470},
+  url = {https://pubs.acs.org/doi/pdf/10.1021/cr4004133},
+  doi = {10.1021/cr4004133}
+}
 @article{Laasonen1993,
 author = {Laasonen,K.  and Sprik,M.  and Parrinello,M.  and Car,R. },
 title = {"Ab initio" liquid water},
-journal = {The Journal of Chemical Physics},
+journal = {J. Chem. Phys.},
 volume = {99},
 number = {11},
 pages = {9080-9089},
@@ -9809,7 +9756,7 @@ pages = {10398-10408}
 @article{Kumar2007,
 author = {Kumar,R.  and Schmidt,J. R.  and Skinner,J. L. },
 title = {Hydrogen Bonding Definitions and Dynamics in Liquid Water},
-journal = {The Journal of Chemical Physics},
+journal = {J. Chem. Phys.},
 volume = {126},
 number = {20},
 pages = {204107},
@@ -9830,21 +9777,154 @@ volume = {106},
 number = {16-18},
 pages = {2053-2076},
 year  = {2008},
-publisher = {Taylor & Francis},
+publisher = {Taylor \& Francis},
 doi = {10.1080/00268970802116146},
 URL = {https://doi.org/10.1080/00268970802116146},
 eprint = {https://doi.org/10.1080/00268970802116146},
 abstract = { Arguably the most important liquid in our existence, water continues to attract enormous efforts to understand its underlying structure, dynamics and thermodynamics. These properties become increasingly complex and controversial as we progress into and below the ‘no man's land' where bulk water can only exist as crystalline ice. Various, so far unconfirmed, scenarios are painted for this region, including the second critical point scenario, the singularity-free scenario, and most recently the ‘critical point-free’ scenario [C.A. Angell, Science 319, 582 (2008)]. In this article the structural aspects of water in its supercooled, amorphous and confined states are explored, to the extent that these are known, and related to the water phase diagram. An important issue to emerge is the extent to which structural measurements on a disordered material can tell us about its phase. }
 }
-@ARTICLE{,
-author = {},
-title = {{}},
-journal = {},
-year = {},
-volume = {},
-number ={},
-pages = {},
-abstract= {{ }}
+@article {Weber2000,
+	author = {Weber, J. Mathias and Kelley, Jude A. and Nielsen, Steen B. and Ayotte, Patrick and Johnson, Mark A.},
+	title = {Isolating the Spectroscopic Signature of a Hydration Shell With the Use of Clusters: Superoxide Tetrahydrate},
+	volume = {287},
+	number = {5462},
+	pages = {2461-2463},
+	year = {2000},
+	doi = {10.1126/science.287.5462.2461},
+	publisher = {American Association for the Advancement of Science},
+	abstract = {Cluster spectroscopy, aided by ab initio theory, was used to determine the detailed structure of a complete hydration shell around an anion. Infrared spectra of size-selected O2 -{\textperiodcentered} (H2O)n(n = 1 to 4) cluster ions were obtained by photoevaporation of an argon nanomatrix. Four water molecules are required to complete the coordination shell. The simple spectrum of the tetrahydrate reveals a structure in which each water molecule is engaged in a single hydrogen bond to one of the four lobes of the π* orbital of the superoxide, whereas the water molecules bind together in pairs. This illustrates how water networks deform upon accommodating a solute ion to create a distinct supramolecular species.},
+	issn = {0036-8075},
+	URL = {https://science.sciencemag.org/content/287/5462/2461},
+	eprint = {https://science.sciencemag.org/content/287/5462/2461.full.pdf},
+	journal = {Science}
+}
+@ARTICLE{Jimenez1994,
+author = {Jimenez, R. and Fleming, G. and Kumar, P and Maroncelli, M.},
+title = {{Femtosecond Solvation Dynamics of Water}},
+journal = {Nature},
+year = {1994},
+volume = {369},
+doi ={https://doi.org/10.1038/369471a0},
+pages = {471-473}
+}
+@article{Smith1994,
+author = {Smith,David E.  and Dang,Liem X. },
+title = {Computer simulations of NaCl association in polarizable water},
+journal = {J. Chem. Phys.},
+volume = {100},
+number = {5},
+pages = {3757-3766},
+year = {1994},
+doi = {10.1063/1.466363},
+URL = { 
+        https://doi.org/10.1063/1.466363
+}}
+@article{Ramaniah1998,
+author = {Ramaniah, Lavanya M. and Bernasconi, Marco and Parrinello, Michele },
+title = {Density-functional study of hydration of sodium in water clusters},
+journal = {J. Chem. Phys.},
+volume = {109},
+number = {16},
+pages = {6839-6843},
+year = {1998},
+doi = {10.1063/1.477250},
+URL = { 
+        https://doi.org/10.1063/1.477250
+}}
+@ARTICLE{Hashimoto1994,
+author = {Hashimoto, K. and Morokuma, K.},
+title = {{Ab Initio Molecular Orbital Study of Na(H2O)n (n = 1-6) Clusters and Their Ions. Comparison of Electronic Structure of the "Surface" and "Interior" Complexes}},
+journal = {J. Am. Chem. Soc.},
+year = {1994},
+volume = {116},
+number ={25},
+pages = {11436-11443},
+doi = {10.1021/ja00104a024}
+}
+@article{Irudayam2012,
+author = {Irudayam, Sheeba Jem and Henchman, Richard H.},
+title = {Long-range hydrogen-bond structure in aqueous solutions and the vapor-water interface},
+journal = {J. Chem. Phys.},
+volume = {137},
+number = {3},
+pages = {034508},
+year = {2012},
+doi = {10.1063/1.4735267},
+URL = { 
+      https://doi.org/10.1063/1.4735267
+}}
+@ARTICLE{Smith2004,
+author = {Jared D. Smith and Christopher D. Cappa and Kevin R. Wilson and Benjamin M. Messer and Ronald C. Cohen and Richard J. Saykally},
+title = {{Energetics of Hydrogen Bond Network Rearrangements in Liquid Water}},
+journal = {Science},
+year = {2004},
+volume = {306},
+number ={5697},
+pages = {851-853},
+doi = {10.1126/science.1102560},
+url = {https://science.sciencemag.org/content/306/5697/851/tab-pdf},
+abstract= {{Not read yet }}
+}
+@ARTICLE{Fernandex-Serra2006,
+author = {M. V. Fern\'{a}ndez-Serra and Emilio Artacho},
+title = {{Electrons and Hydrogen-Bond Connectivity in Liquid Water}},
+journal = {Phys. Rev. Lett.},
+year = {2006},
+volume = {96},
+pages = {016404},
+doi = {{https://doi.org/10.1103/PhysRevLett.96.016404}},
+abstract= {{Have not read yet}}
+}
+@ARTICLE{Perakis2016,
+author = {Fivos Perakis and Luigi De Marco and Andrey Shalit and Fujie Tang and Zachary R. Kann and Thomas D. Kühne and Renato Torre and Mischa Bonn and Yuki Nagata},
+title = {{Vibrational Spectroscopy and Dynamics of Water}},
+journal = {Chem. Rev.},
+year = {2016},
+volume = {116},
+number ={13},
+pages = {7590-7607},
+abstract= {{Not read yet: We present an overview of recent static and time-resolved vibrational spectroscopic studies of liquid water from ambient conditions to the supercooled state, as well as of crystalline and amorphous ice forms. The structure and dynamics of the complex hydrogen-bond network formed by water molecules in the bulk and interphases are discussed, as well as the dissipation mechanism of vibrational energy throughout this network. A broad range of water investigations are addressed, from conventional infrared and Raman spectroscopy to femtosecond pump–probe, photon-echo, optical Kerr effect, sum-frequency generation, and two-dimensional infrared spectroscopic studies. Additionally, we discuss novel approaches, such as two-dimensional sum-frequency generation, three-dimensional infrared, and two-dimensional Raman terahertz spectroscopy. By comparison of the complementary aspects probed by various linear and nonlinear spectroscopic techniques, a coherent picture of water dynamics and energetics emerges. Furthermore, we outline future perspectives of vibrational spectroscopy for water researches.}}
+}
+@ARTICLE{Inoue2020,
+author = {Ken-ichi Inoue and Mohammed Ahmed and Satoshi Nihonyanagi and Tahei Tahara},
+title = {{Reorientation-induced relaxation of free OH at the air/water interface revealed by ultrafast heterodyne-detected nonlinear spectroscopy}},
+journal = {Nature Communications},
+year = {2020},
+volume = {11},
+pages = {5344},
+doi = {https://doi.org/10.1038/s41467-020-19143-8},
+abstract= {{The uniqueness of water originates from its three-dimensional hydrogen-bond network, but this hydrogen-bond network is suddenly truncated at the interface and non-hydrogen-bonded OH (free OH) appears. Although this free OH is the most characteristic feature of interfacial water, the molecular-level understanding of its dynamic property is still limited due to the technical difficulty. We study ultrafast vibrational relaxation dynamics of the free OH at the air/water interface using time-resolved heterodyne-detected vibrational sum frequency generation (TR-HD-VSFG) spectroscopy. With the use of singular value decomposition (SVD) analysis, the vibrational relaxation (T1) times of the free OH at the neat H2O and isotopically-diluted water interfaces are determined to be 0.87 ± 0.06 ps (neat H2O), 0.84 ± 0.09 ps (H2O/HOD/D2O = 1/2/1), and 0.88 ± 0.16 ps (H2O/HOD/D2O = 1/8/16). The absence of the isotope effect on the T1 time indicates that the main mechanism of the vibrational relaxation of the free OH is reorientation of the topmost water molecules. The determined sub-picosecond T1 time also suggests that the free OH reorients diffusively without the switching of the hydrogen-bond partner by the topmost water molecule.}}
+}
+@ARTICLE{Ojha2021,
+author = {Ojha, D. and K\"{u}hne, T.D.},
+title = {{Hydrogen bond dynamics of interfacial water molecules revealed from two-dimensional vibrational sum-frequency generation spectroscopy}},
+journal = {Sci. Rep.},
+year = {2021},
+volume = {11},
+pages = {2456},
+doi = {10.1038/s41598-021-81635-4},
+abstract= {{ Vibrational sum-frequency generation (vSFG) spectroscopy allows the study of the structure and dynamics of interfacial systems. In the present work, we provide a simple recipe, based on a narrowband IR pump and broadband vSFG probe technique, to computationally obtain the two-dimensional vSFG spectrum of water molecules at the air–water interface. Using this technique, to study the time-dependent spectral evolution of hydrogen-bonded and free water molecules, we demonstrate that at the interface, the vibrational spectral dynamics of the free OH bond is faster than that of the bonded OH mode.}}
+}
+@ARTICLE{Hua2013,
+author = {Wei Hua abd Dominique Verreault and Heather C. Allen},
+title = {{Surface Prevalence of Perchlorate Anions at the Air/Aqueous Interface}},
+journal = {J. Phys. Chem. Lett},
+year = {2013},
+volume = {4},
+number ={24},
+pages = {4231-4236},
+doi = {10.1021/jz402009f},
+abstract= {{Air/aqueous interfaces provide a unique environment for many chemical, environmental, and biological processes. To gain insight, molecular-level understanding of the interfacial water organization and ion distributions at these interfaces is required. Here, the air/aqueous interface of NaClO4 salt solutions was investigated by means of conventional and heterodyne-detected vibrational sum frequency generation (HD-VSFG) spectroscopy. It is found that perchlorate (ClO4–) ions exist in the interfacial region and prefer to reside on average above their counterions. This finding is inferred from the average orientation of the OH transition dipole moment of interfacial water molecules governed by the direction of the net electric field arising from the interfacial ion distributions. At the air/aqueous interface of NaClO4 salt solutions, the net dipole moments of hydrogen-bonded water molecules are oriented preferentially toward the vapor phase. Contrary to some other salts (e.g., sulfates), the presence of ClO4– may cause a full reversal in the direction of the interfacial electric field at a higher concentration (≥1.7 M). Another interpretation for the positive Im χ(2) spectra of NaClO4 salt solutions could be an increase in the population of water species contributing positively to the net OH transition dipole moment. Regardless of the mechanism, this effect becomes even more pronounced with increasing salt concentration.}}
+}
+@ARTICLE{Pezzotti2017,
+author = {Simone Pezzotti and Daria Ruth Galimberti and Marie-Pierre Gaigeot},
+title = {{2D H-Bond Network as the Topmost Skin to the Air–Water Interface}},
+journal = {J. Phys. Chem. Lett.},
+year = {2017},
+volume = {8},
+number ={13},
+pages = {3133-3141},
+abstract= {{We provide a detailed description of the structure of water at the interface with the air (liquid–vapor LV interface) from state-of-the-art DFT-based molecular dynamics simulations. For the first time, a two-dimensional (2D) H-bond extended network has been identified and fully characterized, demonstrating that interfacial water is organized into a 2D sheet with H-bonds oriented parallel to the instantaneous surface and following its spatial and temporal oscillations. By analyzing the nonlinear vSFG (vibrational sum frequency generation) spectrum of the LV interface in terms of layer-by-layer signal, we demonstrate that the 2D water sheet is solely responsible for the spectral signatures, hence providing the interfacial 3.5 Å thickness effectively probed in nonlinear interfacial spectroscopy. The 2D H-bond network unraveled here is the essential key to rationalize macroscopic properties of water–air interfaces, as demonstrated here for spectroscopy and the surface potential.}}
 }
 @ARTICLE{,
 author = {},
@@ -9856,24 +9936,3 @@ number ={},
 pages = {},
 abstract= {{ }}
 }
-@ARTICLE{,
-author = {},
-title = {{}},
-journal = {},
-year = {},
-volume = {},
-number ={},
-pages = {},
-abstract= {{ }}
-}
-@ARTICLE{,
-author = {},
-title = {{}},
-journal = {},
-year = {},
-volume = {},
-number ={},
-pages = {},
-abstract= {{ }}
-}
-
