--- a/main.tex
+++ b/main.tex
@@ -142,7 +142,8 @@ headsepline, % Uncomment to get a line under the header
 \newcommand{\Iodine}{I$^{-}$}
 \newcommand{\COO}{COO$^{-}$\xspace}
 \newcommand{\sfg}{Sum Frequency Generation\xspace}
-\newcommand{\cm}{cm$^{-1}$~\xspace}
+%\newcommand{\cm}{cm$^{-1}$~\xspace}
+\newcommand{\cm}{cm$^{-1}$\thinspace}
 \newcommand{\centimeter}{cm$^{-1}$}
 \newcommand{\nm}{nm$^{-2}$\xspace}
 \newcommand{\z}{\textit{z}-axis\xspace}
@@ -309,7 +310,11 @@ I have analyzed the interfacial structure and dynamics of solutions containing a
 Molecular Dynamics (DFTMD) simulations. In particular I have presented a detailed analysis of the Hydrogen Bond (HB) structure at the interface and 
 have calculated the interface vibrational spectra in order to provide a molecular interpretation of available experimental data.
 %
-When calculating the SFG spectrum, I used a new approximation method. This method ignores the NR part of the spectrum and finally obtains the interface's nonlinear polarizability to infrared incident light through the velocity correlation function. The theoretical value of the imaginary part of the nonlinear polarizability obtained by this method is the same as the experimental PS-SFG spectrum result.
+When calculating the SFG spectrum, I used a new approximation method. This method ignores the NR part of the spectrum and finally obtains the interface's nonlinear polarizability to infrared incident light through the velocity correlation function. 
+Based on the calculation of MLWF, the parameterization of the spatial gradient of the components of dipole moment 
+and the polarization is realized. Therefore, the calculation of the correlation between the dipole moment and the polarization is 
+transformed into the calculation of the velocity correlation function.
+The theoretical value of the imaginary part of the nonlinear polarizability obtained by this method is the same as the experimental PS-SFG spectrum result.
 
 As a first system I have analyzed the behaviour of a salty water/vapor interface containing LiNO$_3$.
 Both the measured and calculated Vibrational Sum-Frequency Generation (VSFG) spectra shows a reduced intensity of the lower frequency portion region,
@@ -324,21 +329,12 @@ I have shown that the use of simple models, such as small cluster is not suitabl
 and cannot provide a microscopic interpretation of the spectra.
 Realistic models of the interface are required to address the perturbation of the ion on the water surface.
 
-Based on the calculation of MLWF, the parameterization of the spatial gradient of the components of dipole moment 
-and the polarization is realized. Therefore, the calculation of the correlation between the dipole moment and the polarization is 
-transformed into the calculation of the velocity correlation function.
-%
-The difference between the HB dynamics outside the first shell of the \Li and that of nitrate-water Hydrogen (H-) bonds
-at interfaces is not visible from the values of the HB relaxation time. 
-%They reflect the difference between HB dynamics in bulk water and that at the water/vapor interfaces.
-For the water/vapor interface of alkaline iodine solutions, I also find that the cations does not alter the H-bonding network outside the first hydration shell of the cations themselves.
-It is concluded that no long-range structural-changing effects for alkali metal cations.
-
 %
 From the results of nonlinear susceptibilities, I conclude that these water molecules at the water/vapor interfaces of LiI, NaI, and KI solutions are participating
 in weaker H-bonds, compared with those at the pure water surface.
 The origin of the characteristics comes from a unique distribution of \I ions and alkali metal cations,
 which form a double layer over the thickness on the order of 5--10 \A.
+
 
 %
 For the bulk and interfacial systems, I calculated the correlation functions of the HB population, 
@@ -349,6 +345,17 @@ With the help of the HB population operator, one do not need to sample the molec
 i.e., no need to identify the molecules on the interface and calculate the statistical average for the interesting physical quantities. 
 Combining this method with molecule sampling on the interface, we can get more realistic and accurate HB dynamics for the air-water interface.
 The basic idea of this method is also applied to general interface systems, such as the solvation shells of ions in aqueous solutions.
+%
+The difference between the HB dynamics outside the first shell of the \Li and that of nitrate-water Hydrogen (H-) bonds
+at interfaces is not visible from the values of the HB relaxation time. 
+%They reflect the difference between HB dynamics in bulk water and that at the water/vapor interfaces.
+For the water/vapor interface of alkaline iodine solutions, I also find that the cations does not alter the H-bonding network 
+outside the first hydration shell of the cations themselves.
+%It is concluded that no long-range structural-changing effects for alkali metal cations.
+Through Solvation shell HB (SHB) dynamics, I obtained the HB dynamics for the H-Bonds between water molecules in the ion's 
+first solvation shell and those outside the shell. Similarly, I also calculated the reorientation dynamics ($C_2(t)$) of the water molecules in the first solvation shell. 
+The conclusion is: the reorientation dynamics for the water molecules in the first solvation shell is significantly affected by the ions. 
+In contrast, the HB dynamics for the H-bonds between water molecules in the solvation shell and outside the shell are not sensitive to the ions' nature.
 \end{abstract}
 
 %----------------------------------------------------------------------------------------
@@ -429,7 +436,7 @@ The financial supports of the China Scholarship Council and TRR146 are gratefull
 \textbf{H-} & \textbf{H}ydrogen\\
 \textbf{HB} & \textbf{H}ydrogen \textbf{B}ond\\
 \textbf{HK} & \textbf{H}ohenberg-\textbf{K}ohn\\
-\textbf{HSHB} & \textbf{H}ydration \textbf{S}hell \textbf{H}ydrogen \textbf{B}ond\\
+\textbf{SHB} & \textbf{S}olvation shell \textbf{H}ydrogen \textbf{B}ond\\
 \textbf{IHB} & \textbf{I}nterface \textbf{H}ydrogen \textbf{B}ond\\
 \textbf{KS} & \textbf{K}ohn-\textbf{S}ham\\
 \textbf{LDA} & \textbf{L}ocal \textbf{D}ensity \textbf{A}pproximation\\
